<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".ProfileFragment">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="45dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/oswald_variablefont_wght"
        android:text="@string/enhanced_sport_trainer"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="125dp"
        android:text="@string/profile"
        android:textStyle="bold"
        android:textSize="60sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="430dp"
        android:text="Email"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/user_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:background="@color/white"
        android:text="User Email"
        android:layout_marginTop="460dp"
        android:textColor="@android:color/black" />



    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="520dp"
        android:text="Password"
        android:textSize="20sp"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="550dp"
        android:text="********"
        android:background="@color/white"
        android:textColor="@android:color/black" />

    <!-- Update Button -->
    <Button
        android:id="@+id/update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="600dp"
        android:text="Update"/>

    <!-- Logout Button -->
    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginStart="150dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_marginTop="225dp"
        android:layout_height="172dp"
        android:src="@drawable/profile_icon" />

</FrameLayout>


